<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rapido.activity.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@color/white_off_50">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/back" />

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilMainSource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:id="@+id/atvMainSource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_source"
                android:imeOptions="actionNext"
                android:inputType="textAutoComplete"
                android:padding="16dp"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvLogoMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/tilMainSource"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="?actionBarSize"
            android:text="@string/india_s_bike_taxi"
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.PopupMenu.Header"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/tvLogoMessage"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:text="Rapido"
            android:textAllCaps="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.PopupMenu.Header"
            android:textColor="@color/colorPrimary"
            android:textSize="34dp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilMaiDestination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilMainSource"
            android:layout_centerInParent="true">

            <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:id="@+id/atvMainDestination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="?actionBarSize"
                android:hint="@string/enter_destination"
                android:imeOptions="actionDone"
                android:inputType="textAutoComplete"
                android:padding="16dp"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilMaiDestination"
            android:background="@drawable/button_back"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="Lets Go"
            android:textColor="@color/white_off_50" />

        <ProgressBar
            android:id="@+id/pbMain"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_above="@id/btSubmit"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:visibility="gone" />

    </RelativeLayout>

</FrameLayout>
